added update member route
