# internal/service/response.go
@@ -207,6 +207,36 @@ type GetMemberResponse struct {
 	Result family.Member `json:"result,omitempty"`
 }
 
+// UpdateMemberResponse
+//
+// Response by UpdateMember Service.
+//
+// swagger:model
+type UpdateMemberResponse struct {
+	// the id for the request
+	//
+	// required: true
+	// example: 8957bf28-aea0-47de-abe0-d4c5ea593ec6
+	Id string `json:"id"`
+
+	// the response code for the request
+	//
+	// required: true
+	// example: 200
+	Code int `json:"code"`
+
+	// the message for the request
+	//
+	// required: true
+	// example: success
+	Message string `json:"message"`
+
+	// the member for the request
+	//
+	// required: true
+	Result family.Member `json:"result,omitempty"`
+}
+
 // DeleteMemberResponse
 //
 // Response by DeleteMember Service.
